1. Add the option for the client to retrieve an object which includes the envelope xdr with the network id. Then he can send it to the Python sdk which in order sends back the transaction envelope with the whitelist signing. Then the client can send this whitelist transaction.
2. Add fee support which also include an api method to get the current minimum fee from the blockchain

3. Change sample app accordingly

4. Add and change tests

5. Add more error handling

--- a/kin-sdk/src/main/res/values/strings.xml
+++ b/kin-sdk/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">kin-sdk-core-sample</string>
+    <string name="app_name">kin-sdk-sample</string>
 </resources>
