--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="import_wallet">Import Wallet</string>
     <string name="enter_exported_json">Enter exported json</string>
     <string name="retrieve_minimum_fee">Retrieve Minimum Fee</string>
+    <string name="whitelist">whitelist</string>
 </resources>
