1. until will fix KinClient then currently when restore success then create a new KinClient in order for him to be up to date and pass it to the caller. 2. add progress bar for balance and public address fields 3. clear all account when starting the sample app.

--- a/kin-recovery/recovery-sample/src/main/res/values/strings.xml
+++ b/kin-recovery/recovery-sample/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="no_account_to_backup_error">No Account To Backup Error</string>
     <string name="account_creation_error">Account Creation Error</string>
     <string name="on_board_error">On Board Error</string>
+    <string name="backup_success_message">Account has been backed up successfully</string>
+    <string name="kin">KIN</string>
 </resources>
