--- a/kin-backup-and-restore/kin-backup-and-restore-sample/src/main/res/values/strings.xml
+++ b/kin-backup-and-restore/kin-backup-and-restore-sample/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Recovery Sample</string>
+    <string name="app_name">Backup And Restore Sample</string>
     <string name="balance_error">Balance Could Not Be Retrieved</string>
     <string name="public_address_error">Public Address Could Not Be Retrieved</string>
     <string name="current_account_details_label">Current Account Details:</string>
@@ -7,7 +7,7 @@
     <string name="public_address_label">Public Address:</string>
     <string name="create_new_account">Create New Account</string>
     <string name="backup_current_account">Backup Current Account</string>
-    <string name="recover_account">Recover Account</string>
+    <string name="restore_account">Restore Account</string>
     <string name="failed_to_retrieve_account_balance">Failed to retrieved the account balance</string>
     <string name="restoration_has_failed">Restoration has failed</string>
     <string name="backup_has_failed">Backup has failed</string>
